# mind-cli

./: .gitignore  README.md  pyproject.toml
mind/: __init__.py  main.py
mind/commands/: download.py  favorites.py  planner.py  statistics.py  tasks.py  time.py  validation.py
mind/common/: __init__.py  utils.py
mind/config/: .env_template  settings.py
mind/services/api/: __init__.py  clockify.py  jira.py  planner.py
mind/services/download_commands/: __init__.py  download_report_service.py
mind/services/favorites_commands/: __init__.py  favorites_service.py
mind/services/planner_commands/: __init__.py  planner_compare_service.py  planner_show_service.py
mind/services/statistics_commands/: __init__.py  statistics_dashboard_service.py  statistics_heatmap_service.py
mind/services/tasks_commands/: __init__.py  tasks_list_service.py
mind/services/time_commands/: __init__.py  time_hours_service.py  time_log_service.py  time_show_service.py
